# AI-News-Monitor

./: .env.example  .gitignore  CHANGELOG.md  CHATBOT_CONTEXT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  NEXT_VERSION_MONITORING_REPORT.md  NOTIFICATION_GUIDE.md  README.md  README.zh-CN.md  SECURITY.md  SOURCE_GUIDE.md  START_HERE.md  START_HERE.zh-CN.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
ai_news_monitor/: __init__.py
docs/: ARCHITECTURE.md  INSTALL.md  LLM_PROVIDERS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SOCIAL_SOURCES.md  VERIFICATION_PIPELINE.md
locales/: en.json  zh-CN.json
scripts/: bootstrap_macos.sh  build_macos.sh  build_windows.ps1  run_macos.sh
src/: __init__.py  app.py  bias.py  config.py  dedupe.py  dependency_check.py  diagnostics.py  doctor.py  event_clustering.py  event_synthesis.py  i18n.py  language.py  llm_client.py  logging_setup.py  models.py  monitor.py  pipeline.py  realtime.py  sample_data.py  scheduler.py  scoring.py  secrets.py  source_reliability.py  storage.py  translation.py
tests/: helpers.py  test_app_qt_runtime.py  test_claim_corroboration.py  test_config.py  test_dedupe.py  test_deepseek_provider.py  test_doctor.py  test_e2e_operational_closure.py  test_event_browser_ui.py  test_event_clustering.py  test_event_notification_rendering.py  test_http_utils.py  test_interface_diagnostics.py  test_iteration_spec_features.py  test_llm_schema.py  test_monitor.py  test_next_phase_features.py  test_notification_gate.py  (+9 more)
(+94 files in other folders)
