[project]
name = "ai-news-monitor"
version = "0.1.0"
description = "Lightweight desktop AI news monitoring and alerting app."
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = [
  "PySide6==6.7.3",
  "httpx>=0.27",
  "feedparser>=6.0",
  "beautifulsoup4>=4.12",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pyinstaller>=6.0", "ruff>=0.8", "black>=24.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
